--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,15 @@ body {
   color: var(--text-color-light);
 }
 
+.footer a {
+  color: var(--text-color-light);
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
 /* --- 共通カードスタイルを定義 --- */
 .card {
   background-color: var(--card-bg-color);
